padding & new colors

--- a/assets/css/globals.scss
+++ b/assets/css/globals.scss
@@ -3,9 +3,14 @@
     --bg-fade: #1b1b27;
 
     --txt-grey: #656577;
+    --txt-black: #181b37;
+    --txt-sub: #848f9d;
 
     --primary: #f5cb5c;
     --secondary: #eff2f4;
+
+    --card-dark: #331690;
+    --card-light: #f5f5fe;
 }
 
 html, body {
