--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -59,6 +59,7 @@
                 width: 5rem;
                 border-radius: 0.5rem;
                 object-fit: center;
+                background-color: #fff;
             }
     
             p {
