--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -21,3 +21,17 @@
         flex-wrap: wrap;
     }
 }
+
+@media only screen and (max-width: 768px) {
+    #root-home {
+        .card {
+            .card-left {
+                flex: 0 0 100%;
+            }
+
+            .card-right {
+                display: none;
+            }
+        }
+    }
+}
