--- a/assets/styles/components/document/footer.scss
+++ b/assets/styles/components/document/footer.scss
@@ -1,7 +1,8 @@
 .root {
     footer {
         padding: 3rem 0;
-
+        font-size: 1.1rem;
+        
         span {
             a {            
                 color: #fff;
