--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -9,7 +9,7 @@
     --primary: #f5cb5c;
     --secondary: #eff2f4;
 
-    --card-dark: #331690;
+    --card-dark: #2e2e5e;
     --card-light: #f5f5fe;
 }
 
