added more projects

--- a/assets/styles/pages/home.scss
+++ b/assets/styles/pages/home.scss
@@ -115,7 +115,7 @@
         }
 
         &.dark {
-            background-color: var(--card-dark);
+            background-color: var(--primary);
         }
 
         &.light {
