--- a/assets/styles/globals.scss
+++ b/assets/styles/globals.scss
@@ -17,10 +17,10 @@
     font-family: "Ilisarniq"; 
     src: url("/font/font.eot"); 
     src: url("/font/font.eot?#iefix") format("embedded-opentype"), 
-        url("/font.woff2") format("woff2"), 
-        url("/font.woff") format("woff"), 
-        url("/font.ttf") format("truetype"), 
-        url("/font.svg#Ilisarniq") format("svg"); 
+        url("/font/font.woff2") format("woff2"), 
+        url("/font/font.woff") format("woff"), 
+        url("/font/font.ttf") format("truetype"), 
+        url("/font/font.svg#Ilisarniq") format("svg"); 
 }
 
 html, body {
