--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -21,4 +21,19 @@
             text-decoration: underline;
         }
     }
+
+    #cursor {
+        position: fixed;
+        z-index: 100;
+        height: 1.5rem;
+        width: 1.5rem;
+        background: #fff;
+        border-radius: 50%;
+        pointer-events: none;
+        mix-blend-mode: difference;
+        transform: translate(-50%,-50%);
+        transition: width 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93),
+                    height 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93),
+                    opacity 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93);
+    }
 }
