--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -30,10 +30,9 @@
         background: #fff;
         border-radius: 50%;
         pointer-events: none;
-        mix-blend-mode: difference;
         transform: translate(-50%,-50%);
+        opacity: 0.4;
         transition: width 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93),
-                    height 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93),
-                    opacity 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93);
+                    height 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93);
     }
 }
