--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -31,8 +31,8 @@
         border-radius: 50%;
         pointer-events: none;
         transform: translate(-50%,-50%);
-        mix-blend-mode: difference;
-        opacity: 0.4;
+        mix-blend-mode: exclusion;
+        opacity: 0.9;
         transition: width 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93),
                     height 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93);
     }
