--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -24,16 +24,18 @@
 
     #cursor {
         position: fixed;
-        z-index: 100;
-        height: 2rem;
-        width: 2rem;
+        z-index: 20;
+        height: 2.5rem;
+        width: 2.5rem;
         background: #fff;
         border-radius: 50%;
         pointer-events: none;
-        transform: translate(-50%,-50%);
         mix-blend-mode: exclusion;
-        opacity: 0.9;
-        transition: width 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93),
-                    height 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93);
+        transform: translate(-50%, -50%);
+        transition-property: left, top, opacity, height, width, transform;
+        transition: all 0.1s ease-out;
+        opacity: 0;
+        // transition: width 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93),
+                    // height 0.6s cubic-bezier(0.02, 1.23, 0.98, 0.93);
     }
 }
