--- a/assets/styles/pages/about.scss
+++ b/assets/styles/pages/about.scss
@@ -6,7 +6,8 @@
 
         img {
             width: 100%;
-            border-radius: 0.5rem;
+            border-radius: 0.25rem;
+            background: var(--bg-fade);
         }
 
         figcaption {
