--- a/assets/styles/pages/home.scss
+++ b/assets/styles/pages/home.scss
@@ -43,74 +43,89 @@
     .card {
         border-radius: 1rem;
         background-color: var(--primary);
-        padding: 0 3rem;
+        padding: 0 3.5rem;
         margin: 2rem 0 0 0;
         overflow: hidden;
+        transform-style: preserve-3d;
+        
+        article {
 
-        .card-left, .card-right {
-            flex: 0 0 50%;
-        }
+            .card-left, .card-right {
+                flex: 0 0 50%;
+            }
 
-        .card-left {
-            margin: 5rem 0;
+            .card-left {
+                margin: 5rem 0;
+                // transform: translateZ(2rem);
 
-            img {
-                height: 5rem;
-                width: 5rem;
-                border-radius: 0.5rem;
-                object-fit: center;
-                background-color: #fff;
-            }
-    
-            p {
-                margin: 1rem 0;
-            }
-    
-            h1 {
-                font-size: 3rem;
-                margin: 0;
-            }
-    
-            div.flex {
-                margin: 1rem 0 0 0;
-    
-                a {
-                    margin: 0 1rem 0 0;
-                    color: #fff;
-                    font-size: 1.25rem;
-                    text-decoration: none;
-                    padding: 0.5rem 0.75rem;
+                img {
+                    height: 5rem;
+                    width: 5rem;
                     border-radius: 0.5rem;
-                    user-select: none;
-                    background-color: rgba(0, 0, 0, 0.3);
-                    transition: background-color 0.2s ease;
-    
-                    &:hover {
-                        background-color: rgba(0, 0, 0, 0.5);
+                    object-fit: center;
+                    background-color: #fff;
+                }
+        
+                p {
+                    margin: 1rem 0;
+                }
+        
+                h1 {
+                    font-size: 3rem;
+                    margin: 0;
+                }
+        
+                div.flex {
+                    margin: 1rem 0 0 0;
+        
+                    a {
+                        margin: 0 1rem 0 0;
+                        color: #fff;
+                        font-size: 1.25rem;
+                        text-decoration: none;
+                        padding: 0.5rem 0.75rem;
+                        border-radius: 0.5rem;
+                        user-select: none;
+                        background-color: rgba(0, 0, 0, 0.3);
+                        transition: background-color 0.2s ease;
+        
+                        &:hover {
+                            background-color: rgba(0, 0, 0, 0.5);
+                        }
                     }
                 }
             }
-        }
-
-        .card-right {
-            position: relative;
-
-            img {
-                position: absolute;
-                user-select: none;
-                pointer-events: none;
-                transition: transform 0.3s ease;
-
-                &.iphone {
-                    width: 20rem;
-                    left: 3rem;
-                    transform: rotate(10deg) translateY(20%);
+    
+            .card-right {
+                position: relative;
+                overflow: hidden;
+                max-height: 100%;
+    
+                img {
+                    position: absolute;
+                    user-select: none;
+                    pointer-events: none;
+                    transition: transform 0.3s ease;
+    
+                    &.iphone {
+                        width: 20rem;
+                        left: 3rem;
+                        transform: rotate(10deg) translateY(20%);
+                    }
+                    
+                    &.mac {
+                        width: 100%;
+                        transform: scale(1.1);
+                    }
                 }
-                
-                &.mac {
-                    width: 100%;
-                    transform: scale(1.1);
-                }
+            }
+
+            &:hover .card-right img.iphone {
+                transform: rotate(5deg) translateY(20%);
+            }
+    
+            &:hover .card-right img.mac {
+                transform: scale(1.15);
             }
         }
 
@@ -125,14 +140,6 @@
             p {
                 color: var(--txt-sub);
             }
-        }
-
-        &:hover .card-right img.iphone {
-            transform: rotate(5deg) translateY(20%);
-        }
-
-        &:hover .card-right img.mac {
-            transform: scale(1.15);
         }
     }
 }
