--- a/assets/styles/pages/about.scss
+++ b/assets/styles/pages/about.scss
@@ -4,10 +4,16 @@
     .hero {
         margin: 0;
 
-        img {
+        .hero-image {
+            height: 37.313rem;
             width: 100%;
+            background-color: var(--bg-fade);
+            background-image: url("/images/hero.jpeg");
+            background-attachment: fixed;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
             border-radius: 0.25rem;
-            background: var(--bg-fade);
         }
 
         figcaption {
