--- a/assets/styles/pages/about.scss
+++ b/assets/styles/pages/about.scss
@@ -4,15 +4,21 @@
     .hero {
         margin: 0;
 
+        /*
+        background-image: url(img.jpg);
+        background-position: center top;
+        background-size: 100% auto;
+        */
+
         .hero-image {
             height: 37.313rem;
             width: 100%;
             background-color: var(--bg-fade);
             background-image: url("/images/hero.jpeg");
             background-attachment: fixed;
-            background-position: center;
+            background-position: center top;
             background-repeat: no-repeat;
-            background-size: contain;
+            background-size: 100% auto;
             border-radius: 0.25rem;
         }
 
