--- a/assets/styles/pages/about.scss
+++ b/assets/styles/pages/about.scss
@@ -11,14 +11,14 @@
         */
 
         .hero-image {
-            height: 37.313rem;
-            width: 100%;
+            max-width: 100%;
+            min-height: 75vh; 
             background-color: var(--bg-fade);
             background-image: url("/images/hero.jpeg");
-            background-attachment: fixed;
-            background-position: center top;
             background-repeat: no-repeat;
-            background-size: 100% auto;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
             border-radius: 0.25rem;
         }
 
